# webserv

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  a  a.cpp  a.txt  log.txt  test.cpp  tmp.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  clang-format-check.yml  cpp-static-analysis.yml  e2e-test.yml  google-test.yml
cgi-bin/: default.py  get.py
conf/: default.conf  port_error.conf  test.conf
error_page/: 404.html
html/: cgi_get.html  cgi_post.html  cookie_test.html  index.html
html/red/: test.php
include/: example.hpp
lib/fakeit/: fakeit.hpp
src/: example.cpp  main.cpp
src/cgi/: cgi_handler.cpp  cgi_handler.hpp
src/config/: aparser.cpp  aparser.hpp  config.cpp  config.hpp  config_parser.cpp  config_parser.hpp  location_context.cpp  location_context.hpp  location_parser.cpp  location_parser.hpp  server_context.cpp  server_context.hpp  server_parser.cpp  server_parser.hpp
src/http/: a_parser.cpp  a_parser.hpp  cgi_handler.cpp  cgi_handler.hpp  cgi_parser.cpp  cgi_parser.hpp  http_request.cpp  http_request.hpp  http_request_parser.cpp  http_request_parser.hpp  http_response.cpp  http_response.hpp  http_status_code.cpp  http_status_code.hpp  request_handler.cpp  request_handler.hpp
src/logger/: logger.cpp  logger.hpp
src/server/: IOTaskManager.cpp  IOTaskManager.hpp  accept.cpp  accept.hpp  io_task.cpp  io_task.hpp  io_task_manager.cpp  io_task_manager.hpp  read_cgi.cpp  read_cgi.hpp  read_from_cgi.cpp  read_from_cgi.hpp  read_request_from_client.cpp  read_request_from_client.hpp  server.cpp  server.hpp  write_response_to_client.cpp  write_response_to_client.hpp  write_to_cgi.cpp  write_to_cgi.hpp
src/utils/: addr_utils.cpp  addr_utils.hpp  container.hpp  container_to_string.hpp  datetime.cpp  datetime.hpp  file_utils.cpp  file_utils.hpp  merge_container.hpp  merge_string_and_container.hpp  null_stream.cpp  null_stream.hpp  option.hpp  result.cpp  result.hpp  str_to_i.cpp  str_to_i.hpp  string.cpp  string.hpp  string_utils.cpp  string_utils.hpp  time.cpp  time.hpp  validation.cpp  validation.hpp
study/: Makefile
study/include/: include.hpp
study/srcs/: client.cpp  daemon.cpp  server.cpp  server_kqueue.cpp  signaltest.cpp
test/: accept_test.cpp  add_test.cpp  cgi_handler_test.cpp  cgi_parser_test.cpp  config_test.cpp  container_to_string_test.cpp  file_utils_test.cpp  http_response_test.cpp  io_task_manager_test.cpp  logger_test.cpp  null_stream_test.cpp  option_test.cpp  request_handler_test.cpp  request_parser_test.cpp  result_test.cpp  str_to_i_test.cpp  string_test.cpp  subtract_test.cpp  time_test.cpp  validation_test.cpp
test/cgi_output/: nomal.txt
test/conf_test/: default.conf  double_error_page.conf  double_location.conf  double_location_Cgi_Extension.conf  double_location_Cgi_Extention.conf  double_location_alias.conf  double_location_cgi_path.conf  double_location_error_page.conf  double_location_index.conf  double_location_limit_client_body.conf  double_location_return.conf  double_location_root.conf  double_port.conf  double_server_pair.conf  error_page_error.conf  host_listen.conf  host_listen_server_name.conf  invalid_key.conf  invalid_location_key.conf  invalid_location_value.conf  invalid_server.conf  invalid_server_key.conf  invalid_server_value.conf  location_syntax_error.conf  no_root.conf  port_ip.conf  port_ip_server_name.conf  search_location.conf  search_server.conf  server_syntax_error.conf  (+1 more)
(+105 files in other folders)
